# ContingameIME

./: .gitignore  build.gradle  gradle.properties
src/main/java/city/windmill/ingameime/client/jni/: ExternalBaseIME.java  ICommitListener.java  NativeLoader.java
src/main/java/com/xinian/contingameime/: Contingameime.java
src/main/java/com/xinian/contingameime/client/: TextFieldDetector.java
src/main/java/com/xinian/contingameime/client/event/: ClientScreenEventHooks.java
src/main/java/com/xinian/contingameime/client/gui/: IMEConfigScreen.java  OverlayScreen.java
src/main/java/com/xinian/contingameime/client/gui/widget/: AlphaModeWidget.java  CandidateListWidget.java  CompositionWidget.java  Widget.java
src/main/java/com/xinian/contingameime/client/handler/: ConfigHandler.java  IMEHandler.java  KeyHandler.java  ScreenHandler.java
src/main/java/com/xinian/contingameime/mixin/: ChatScreenAccessor.java  MixinAbstractWidget.java  MixinChatScreen.java  MixinEditBox.java  MixinEditScreen.java  MixinMinecraft.java  MixinMouseHandler.java  MixinScreen.java
src/main/java/cpp/: CMakeLists.txt  city_windmill_ingameime_client_jni_ExternalBaseIME.cpp
src/main/resources/: contingameime.mixins.json
src/main/resources/assets/contingameime/lang/: en_us.json  zh_cn.json  zh_tw.json
